# volvo-3-reimagined-conversations

./: .dockerignore  .env-example  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dashboard  Makefile  README.md  cloudbuild-dashboard.yaml  cloudbuild-full.yaml  index.html  package-lock.json  package.json  presentation.html  preview-dev.html  preview.html  pyproject.toml  sync-from-main.sh  tailwind.config.js  tsconfig.app.json  vite.config.ts
.github/: copilot-instructions.md
.github/agents/: frontend-coder.md
Karim's edits/: CHANGES.md
app/: .env-example  file_session_service.py  firestore_session_service.py  init_db.py  main.py  simple_memory_service.py
app/volvo_agent/: __init__.py  enums.py  prompts.py  state.py  volvo_agent.py
debug_frontend/: index.html
debug_frontend/css/: style.css
debug_frontend/js/: app.js  audio-recorder.js
docs/: firebase-storage-structure.md  frontend-payloads.md
frontend/: index.html
frontend/css/: style.css
frontend/debug/: index.html
frontend/js/: app.js
src/: App.tsx  index.css  react-simple-maps.d.ts
src/constants/: cityCoordinates.ts  designTokens.ts
src/data/: Van_Profile_Example_Jon.json  Van_Profile_Schema.json
src/hooks/: useAIEnrichedProfile.ts  useAuth.ts
src/lib/: emailTemplates.ts  firebase.ts  gemini.ts
src/pages/: ActionsPage.tsx  DesignSystemTest.tsx  LoginPage.tsx  MapPage.tsx  OverviewPage.tsx  ProfileDetailPage.tsx  ProfilesListPage.tsx
src/services/: authService.ts  liveStateService.ts  profileService.ts  retellService.ts
src/store/: authStore.ts  liveStateStore.ts  profileStore.ts  themeStore.ts
src/styles/: globals.css
src/types/: auth.ts  profile.ts
src/utils/: schemaValidator.ts
tests/: test_persistence.py
ui/: .gitignore  README.md  eslint.config.mjs  nuxt.config.ts  package.json
ui/.github/: copilot-instructions.md
ui/.nuxt/: components.d.ts  eslint-typegen.d.ts  eslint.config.mjs  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  nuxt.node.d.ts  tsconfig.app.json  tsconfig.json  (+2 more)
(+205 files in other folders)
